# WatchParty

./: .gitignore  README.md  black.toml  pyproject.toml
docker/: docker-compose.yaml  dockerfile
src/watch_party/: __init__.py  main.py
src/watch_party/api/: api_commons.py  error_code.py  room_api.py  video_api.py
src/watch_party/auth/: auth.py
src/watch_party/cmd/: run.py
src/watch_party/commons/: __init__.py  commons.py  subtitle_commons.py
src/watch_party/config/: config.py  default_config.py
src/watch_party/log/: logController.py
src/watch_party/manager/: roomManager.py  userManager.py
src/watch_party/static/css/: room.css  style.css
src/watch_party/static/js/: README.md  app.js  main.js  room.js
src/watch_party/templates/: 404.html  base.html  index.html  room.html  user.html
src/watch_party/types/: room.py  user.py  video.py
